SIP-3192: Fix for alignment issues and field validations not working on blur

--- a/saw-web/src/main/javascript/login/components/password-change/password-change.component.scss
+++ b/saw-web/src/main/javascript/login/components/password-change/password-change.component.scss
@@ -3,5 +3,5 @@
 }
 
 .changePwd-formField {
-  width: 350px !important;
+  width: 420px !important;
 }
